--- a/style.css
+++ b/style.css
@@ -18,8 +18,16 @@ body {
      padding: 0;
      min-height: 100vh; /* Para garantir que o rodapé não sobreponha o conteúdo */
  }
- 
- 
+
+ main {
+    flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+ /* Centraliza verticalmente */
+  align-items: center;
+ }
+
  /* Estiliza os tÃ­tulos h1 */
  h1 {
      font-size: 2.5rem; /* Tamanho da fonte */
@@ -116,7 +124,7 @@ body {
     text-align: center;
     padding: 1rem;
     width: 100%;
-    position: relative;
+    position: sticky;
     bottom: 0;
 
  }
