[fix] back-2-version

--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ body {
         background-size: cover; /* Escala a imagem para cobrir todo o elemento */
         background-repeat: no-repeat; /* Impede que a imagem se repita */
         background-position: center center; /* Centraliza a imagem */
+        background-attachment: fixed;
     }
 
     main {
