--- a/style.css
+++ b/style.css
@@ -37,10 +37,10 @@ nav {
 
 /* Estiliza o contêiner das imagens de redes sociais */
 .image-container {
-    display: flex; /* Alinha os ícones em linha */
-    gap: 20px; /* Espaço entre os ícones */
-    position: absolute; /* Posiciona o contêiner relativo ao pai */
-    right: 0; /* Alinha à direita */
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    right: 0;
 }
 
 /* Estiliza as imagens dentro do contêiner */
