--- a/style.css
+++ b/style.css
@@ -40,16 +40,26 @@ nav {
     display: flex;
     gap: 20px;
     position: absolute;
-    right: 0;
+    right: 20px;
+}
+
+/* Adiciona uma transição suave à mudança de cor */
+.image-container a {
+    display: inline-block;
+    transition: filter 0.3s ease;
+}
+
+/* Altera a cor das imagens para amarelo ao passar o mouse */
+.image-container a:hover img {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(1000%) hue-rotate(40deg) brightness(95%);
 }
 
 /* Estiliza as imagens dentro do contêiner */
 .image-container a img {
-    display: block; /* Remove o espaçamento abaixo das imagens */
-    width: 30px; /* Define a largura das imagens */
-    height: auto; /* Mantém a proporção da imagem */
+    display: block;
+    width: 30px;
+    height: auto;
 }
-
 
 /* Estiliza o corpo da página */
 body {
