--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ section button {
         background-size: cover; /* Escala a imagem para cobrir todo o elemento */
         background-repeat: no-repeat; /* Impede que a imagem se repita */
         background-position: center center; /* Centraliza a imagem */
-        background-attachment: fixed;
+        background-attachment: scroll;
     }
 
     main {
